[gd_scene load_steps=84 format=3 uid="uid://y2cnlapnfjk5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1b8q4"]
[ext_resource type="Texture2D" uid="uid://nsokijdr7o30" path="res://assets/player/Sombra/Attack 1.png" id="2_si516"]
[ext_resource type="Texture2D" uid="uid://nofb0jqw6cff" path="res://assets/player/Sombra/Attack 2.png" id="3_577ex"]
[ext_resource type="Texture2D" uid="uid://dpecuc0s7sstq" path="res://assets/player/Sombra/Attack 3.png" id="4_jtd5d"]
[ext_resource type="Texture2D" uid="uid://bdm1w75yc85cu" path="res://assets/player/Sombra/Fall.png" id="5_vpqjp"]
[ext_resource type="Texture2D" uid="uid://bpbc05vq47p6y" path="res://assets/player/Sombra/Hit Front.png" id="6_1gsga"]
[ext_resource type="Texture2D" uid="uid://vdjqawh7bf74" path="res://assets/player/Sombra/Combat Ready Idle.png" id="7_hv21u"]
[ext_resource type="Texture2D" uid="uid://cjercnt31axhj" path="res://assets/player/Sombra/Jump.png" id="8_5bk2y"]
[ext_resource type="Texture2D" uid="uid://cg81um645m1pt" path="res://assets/player/Sombra/Roll.png" id="9_ecopp"]
[ext_resource type="Texture2D" uid="uid://dsg6ded8ys6sd" path="res://assets/player/Sombra/Run.png" id="10_g8kju"]
[ext_resource type="Texture2D" uid="uid://b0nba4kcdbc6" path="res://assets/player/Sombra/Walk.png" id="11_ie6io"]
[ext_resource type="AudioStream" uid="uid://u64s01lsvw6j" path="res://assets/brackeys_platformer_assets/brackeys_platformer_assets/sounds/tap.wav" id="12_5vpqi"]
[ext_resource type="AudioStream" uid="uid://bscr35ojm60b3" path="res://assets/brackeys_platformer_assets/brackeys_platformer_assets/sounds/power_up.wav" id="13_03bx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c7x6"]
size = Vector2(12.5, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ciw"]
atlas = ExtResource("2_si516")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_22t65"]
atlas = ExtResource("2_si516")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwnwx"]
atlas = ExtResource("2_si516")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sgmr"]
atlas = ExtResource("2_si516")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_megpu"]
atlas = ExtResource("2_si516")
region = Rect2(200, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjvmv"]
atlas = ExtResource("2_si516")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7a27"]
atlas = ExtResource("2_si516")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t338"]
atlas = ExtResource("2_si516")
region = Rect2(320, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxx5h"]
atlas = ExtResource("2_si516")
region = Rect2(360, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujty5"]
atlas = ExtResource("3_577ex")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2w3x"]
atlas = ExtResource("3_577ex")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwcrr"]
atlas = ExtResource("3_577ex")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbrd1"]
atlas = ExtResource("3_577ex")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2ws4"]
atlas = ExtResource("3_577ex")
region = Rect2(200, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_078j1"]
atlas = ExtResource("3_577ex")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw43v"]
atlas = ExtResource("3_577ex")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtcwj"]
atlas = ExtResource("3_577ex")
region = Rect2(320, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x3ra"]
atlas = ExtResource("4_jtd5d")
region = Rect2(0, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvvld"]
atlas = ExtResource("4_jtd5d")
region = Rect2(40, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8hx1"]
atlas = ExtResource("4_jtd5d")
region = Rect2(80, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrg70"]
atlas = ExtResource("4_jtd5d")
region = Rect2(120, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1yja"]
atlas = ExtResource("4_jtd5d")
region = Rect2(160, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceury"]
atlas = ExtResource("4_jtd5d")
region = Rect2(240, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah56n"]
atlas = ExtResource("4_jtd5d")
region = Rect2(280, 0, 40, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57f3"]
atlas = ExtResource("5_vpqjp")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lckfd"]
atlas = ExtResource("5_vpqjp")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhsw1"]
atlas = ExtResource("5_vpqjp")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1gbr"]
atlas = ExtResource("5_vpqjp")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nkxk"]
atlas = ExtResource("6_1gsga")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8x03"]
atlas = ExtResource("6_1gsga")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri4en"]
atlas = ExtResource("6_1gsga")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuu1s"]
atlas = ExtResource("6_1gsga")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uebm"]
atlas = ExtResource("6_1gsga")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm6jx"]
atlas = ExtResource("6_1gsga")
region = Rect2(110, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jikyb"]
atlas = ExtResource("7_hv21u")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d41tp"]
atlas = ExtResource("7_hv21u")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf4vt"]
atlas = ExtResource("7_hv21u")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pml1"]
atlas = ExtResource("7_hv21u")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3we68"]
atlas = ExtResource("7_hv21u")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5qvt"]
atlas = ExtResource("8_5bk2y")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2x6v"]
atlas = ExtResource("8_5bk2y")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc678"]
atlas = ExtResource("8_5bk2y")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m03rf"]
atlas = ExtResource("8_5bk2y")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_se51x"]
atlas = ExtResource("9_ecopp")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef5h7"]
atlas = ExtResource("9_ecopp")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ger87"]
atlas = ExtResource("9_ecopp")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ofme"]
atlas = ExtResource("9_ecopp")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5jx0"]
atlas = ExtResource("9_ecopp")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6kj"]
atlas = ExtResource("9_ecopp")
region = Rect2(110, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrqbh"]
atlas = ExtResource("9_ecopp")
region = Rect2(132, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydt17"]
atlas = ExtResource("9_ecopp")
region = Rect2(154, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcm0y"]
atlas = ExtResource("9_ecopp")
region = Rect2(176, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia1by"]
atlas = ExtResource("9_ecopp")
region = Rect2(198, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2kp4"]
atlas = ExtResource("9_ecopp")
region = Rect2(220, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mknet"]
atlas = ExtResource("10_g8kju")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmf6j"]
atlas = ExtResource("10_g8kju")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jivt"]
atlas = ExtResource("10_g8kju")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_keal8"]
atlas = ExtResource("10_g8kju")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyc6p"]
atlas = ExtResource("10_g8kju")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qlbe"]
atlas = ExtResource("10_g8kju")
region = Rect2(110, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj7he"]
atlas = ExtResource("11_ie6io")
region = Rect2(0, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i704"]
atlas = ExtResource("11_ie6io")
region = Rect2(22, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_61b5j"]
atlas = ExtResource("11_ie6io")
region = Rect2(44, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o5gc"]
atlas = ExtResource("11_ie6io")
region = Rect2(66, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvr5b"]
atlas = ExtResource("11_ie6io")
region = Rect2(88, 0, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k71yi"]
atlas = ExtResource("11_ie6io")
region = Rect2(110, 0, 22, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_7bv1g"]
animations = [{
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_00ciw")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_22t65")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_pwnwx")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_6sgmr")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_megpu")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_wjvmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7a27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t338")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxx5h")
}],
"loop": false,
"name": &"attack_1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujty5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2w3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwcrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbrd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2ws4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_078j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw43v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtcwj")
}],
"loop": false,
"name": &"attack_2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x3ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvvld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8hx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrg70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceury")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah56n")
}],
"loop": false,
"name": &"attack_3",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lckfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhsw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1gbr")
}],
"loop": true,
"name": &"fall",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nkxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8x03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri4en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuu1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm6jx")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jikyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d41tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf4vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pml1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3we68")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5qvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2x6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc678")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m03rf")
}],
"loop": true,
"name": &"jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se51x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef5h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ger87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ofme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5jx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk6kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrqbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydt17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcm0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia1by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2kp4")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mknet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmf6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jivt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keal8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyc6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qlbe")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj7he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i704")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61b5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o5gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvr5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k71yi")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m5vrj"]
radius = 14.1667
height = 36.6667

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nl4jw"]
size = Vector2(33.3333, 5.83333)

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(1.2, 1.2)
collision_mask = 18
script = ExtResource("1_1b8q4")
damage = 28
speed = 180.0
sprint_speed = 285.0
dash_duration = 0.11
vidaMax = 120
vidaAtual = 120
energiaMax = 130
energiaAtual = 130
energiaGasto = 9

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2(-3.33333, 7.5)
shape = SubResource("RectangleShape2D_7c7x6")
one_way_collision_margin = 0.0

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_7bv1g")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.6, 1.6)
process_callback = 0
limit_left = -16
limit_bottom = 80
limit_smoothed = true
position_smoothing_speed = 24.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.3
drag_right_margin = 0.4
drag_bottom_margin = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Attack1Box" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack1Box"]
shape = SubResource("CapsuleShape2D_m5vrj")
debug_color = Color(0.646792, 0, 0.142899, 0.42)

[node name="Attack2Box" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack2Box"]
position = Vector2(3.11458, 0.21875)
scale = Vector2(1.35938, 0.890625)
polygon = PackedVector2Array(13.0345, -2.11696, 15.4866, 4.43275, 13.0345, 14.7251, 6.29119, 18.4678, -17.0038, 17.5322, -5.96935, -7.73099, 3.83908, -7.73099)

[node name="Attack3Box" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack3Box"]
shape = SubResource("RectangleShape2D_nl4jw")

[node name="Tap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_5vpqi")
volume_db = -7.018

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_03bx4")
volume_db = -20.0

[connection signal="animation_changed" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_changed"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_sprite_frame_changed"]
[connection signal="area_entered" from="Attack1Box" to="." method="_on_attack_1_box_area_entered"]
[connection signal="area_exited" from="Attack1Box" to="." method="_on_attack_1_box_area_exited"]
[connection signal="area_entered" from="Attack2Box" to="." method="_on_attack_2_box_area_entered"]
[connection signal="area_exited" from="Attack2Box" to="." method="_on_attack_2_box_area_exited"]
[connection signal="area_entered" from="Attack3Box" to="." method="_on_attack_3_box_area_entered"]
[connection signal="area_exited" from="Attack3Box" to="." method="_on_attack_3_box_area_exited"]
